k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api-deployment
  namespace: production

spec:
  replicas: 3

  selector:
    matchLabels:
      app: node-api

  template:
    metadata:
      labels:
        app: node-api

     

    spec:
      securityContext:
        runAsNonRoot: false
        fsGroup: 1000

      containers:
      - name: node-api
        image: lazares/node-api:v1.0

        ports:
        - name: api-web
          containerPort: 3000

        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL

        readinessProbe:
          httpGet:
            path: /health
            port: api-web
          initialDelaySeconds: 10

        livenessProbe:
          httpGet:
            path: /health
            port: api-web
          initialDelaySeconds: 30
