k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api-service
  namespace: production

spec:
  selector:
    app: node-api

  ports:
  - name: api-web
    port: 3000
    targetPort: api-web

  type: NodePort
